# OpenCvCameraStream

./: CMakeLists.txt  CameraStream.sln
CameraStream/: CameraStream.vcxproj  CameraStream.vcxproj.filters  client.cpp
CameraStreamServer/: CameraStreamServer.vcxproj  CameraStreamServer.vcxproj.filters  server.cpp
CameraStreamShared/: Ansi.h  Byte.cpp  Byte.h  CameraStreamShared.vcxproj  CameraStreamShared.vcxproj.filters  Logger.cpp  Logger.h  Socket.cpp  Socket.h  Task.cpp  Task.h  huffman.h  incglobal.h  test.cpp
